@@ -5,22 +5,6 @@ tasks.withType(JavaCompile).configureEach {
     options.compilerArgs += ['-source', '21', '-target', '21']
 }
 
-sourceSets {
-    itest {
-        java.srcDir 'src/itest/java'
-        resources.srcDir 'src/itest/resources'
-        compileClasspath += sourceSets.main.output + sourceSets.test.output
-        runtimeClasspath += sourceSets.main.output + sourceSets.test.output
-    }
-}
-
-configurations {
-    itestImplementation.extendsFrom implementation
-    itestRuntimeOnly.extendsFrom runtimeOnly
-    itestImplementation.extendsFrom testImplementation
-    itestRuntimeOnly.extendsFrom testRuntimeOnly
-}
-
 dependencies {
     implementation 'org.opensearch.client:opensearch-java:3.6.0'
     implementation 'org.apache.httpcomponents.client5:httpclient5'
@@ -35,32 +19,4 @@ dependencies {
     implementation project(':libs:common')
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
-    itestImplementation 'org.springframework.boot:spring-boot-starter'
-    itestImplementation 'org.springframework.boot:spring-boot-starter-actuator'
-    itestImplementation 'org.redisson:redisson-spring-boot-starter:3.35.0'
-    itestImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
-
-tasks.register('itest', Test) {
-    description = 'Runs integration tests against live Docker Compose services.'
-    group = 'verification'
-    testClassesDirs = sourceSets.itest.output.classesDirs
-    classpath = sourceSets.itest.runtimeClasspath
-    shouldRunAfter test
-    jvmArgs '-Dnet.bytebuddy.experimental=true'
-    useJUnitPlatform()
-}
-
-check.dependsOn itest
-
-afterEvaluate {
-    def itestTask = tasks.findByName('itest')
-    if (itestTask) {
-        rootProject.dockerCompose.isRequiredBy(itestTask)
-    }
-}
-
-tasks.named('processItestResources') {
-    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
